--- a/elements.html
+++ b/elements.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Elements</h1>
-						<p>Ipsum dolor sit amet nullam</p>
+						<p>hey</p>
 					</header>
 
 				<!-- Main -->
@@ -387,4 +387,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
