Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/elements.html
+++ b/elements.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Elements</h1>
-						<p>hey</p>
+						<p>Ipsum dolor sit amet nullam</p>
 					</header>
 
 				<!-- Main -->
@@ -389,3 +389,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
