Update index.html with SSL info and GitHub link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#gh" class="active">Link for GH</a></li>
+							<li><a href="https://github.com/Xnogst" class="active">Link for GH</a></li>
 						</ul>
 					</nav>
 					
@@ -40,3 +40,4 @@
 	</body>
 
 </html>
+
