Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<span class="logo"><img src="" alt="" /></span>
 						<h1>Kaan Metin</h1>
 						<p>This site has SSL certificate and is secured<br />
 						Repo named "kaanwebsite"</a>.</p>
@@ -40,4 +40,5 @@
 	</body>
 
 </html>
+
 
