--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title></title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="" alt="" /></span>
+						<span class=""><img src="" alt="" /></span>
 						<h1>Kaan Metin</h1>
 						<p>This site has SSL certificate and is secured<br />
 						Repo named "kaanwebsite"</a>.</p>
@@ -40,5 +40,6 @@
 	</body>
 
 </html>
+
 
 
