--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="" alt="" /></span>
+						<span class="logo"><img src="images/logo.png" alt="kaan" /></span>
 						<h1>Kaan Metin</h1>
 						<p>This site has SSL certificate and is secured<br />
 						Repo named "kaanwebsite"</a>.</p>
@@ -40,6 +40,7 @@
 	</body>
 
 </html>
+
 
 
 
