--- a/index.html
+++ b/index.html
@@ -1,45 +1,59 @@
 <!DOCTYPE HTML>
-<!--
-	Stellar by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title></title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <meta charset="utf-8" />
+    <title>Kaan Metin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  </head>
+  <body class="is-preload">
+    <div id="wrapper">
+      <!-- Header -->
+      <header id="header" class="alt">
+        <span class="logo"><img src="images/logo.png" alt="Kaan Metin" /></span>
+        <h1>Kaan Metin</h1>
+        <p>SSL etkin, Stellar temelli kişisel sitem.</p>
+      </header>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+      <!-- Nav -->
+      <nav id="nav">
+        <ul>
+          <li><a href="#about" class="active">Hakkımda</a></li>
+          <li><a href="https://github.com/Xnogst" target="_blank" rel="noopener">GitHub</a></li>
+        </ul>
+      </nav>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.png" alt="kaan" /></span>
-						<h1>Kaan Metin</h1>
-						<p>This site has SSL certificate and is secured<br />
-						Repo named "kaanwebsite"</a>.</p>
-					</header>
+      <!-- Main -->
+      <div id="main">
+        <section id="about" class="main">
+          <header class="major">
+            <h2>Hakkımda</h2>
+            <p>Kısa tanıtım metni buraya.</p>
+          </header>
+          <p>Stellar tema test içeriği.</p>
+        </section>
+      </div>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="https://github.com/Xnogst" class="active">Link for GH</a></li>
-						</ul>
-					</nav>
-					
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<h2>A work of Kaan Metin</h2>
+      <!-- Footer -->
+      <footer id="footer">
+        <section>
+          <h2>A work of Kaan Metin</h2>
+          <p>© <span id="year"></span> Kaan Metin</p>
+        </section>
+      </footer>
+    </div>
 
-	</body>
-
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  </body>
 </html>
+
 
 
 
