--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <header id="header" class="alt">
         <span class="logo"><img src="images/logo.png" alt="Kaan Metin" /></span>
         <h1>Kaan Metin</h1>
-        <p>SSL etkin, Stellar temelli kişisel sitem.</p>
+        <p>This site has SSL certificate and is secure.</p>
       </header>
 
       <!-- Nav -->
       <nav id="nav">
         <ul>
-          <li><a href="#about" class="active">Hakkımda</a></li>
+          <li><a href="#about" class="active">About</a></li>
           <li><a href="https://github.com/Xnogst" target="_blank" rel="noopener">GitHub</a></li>
         </ul>
       </nav>
@@ -28,10 +28,10 @@
       <div id="main">
         <section id="about" class="main">
           <header class="major">
-            <h2>Hakkımda</h2>
-            <p>Kısa tanıtım metni buraya.</p>
+            <h2>About</h2>
+            <p>Studying Cybersecurity Engineering at Taltech.</p>
           </header>
-          <p>Stellar tema test içeriği.</p>
+          <p></p>
         </section>
       </div>
 
@@ -53,6 +53,7 @@
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </body>
 </html>
+
 
 
 
