--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header" class="alt">
-        <span class="logo"><img src="images/logo.png" alt="Kaan Metin" /></span>
+        <span class="logo"><img src="images/gercek.png" alt="Kaan Metin" /></span>
         <h1>Kaan Metin</h1>
         <p>This site has SSL certificate and is secure.</p>
       </header>
@@ -53,6 +53,7 @@
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </body>
 </html>
+
 
 
 
